# AstroBox-NG-Plugin-LiveActivity

./: Cargo.toml  LICENSE  LICENSE-zh_CN  README.md
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Example.kt  ExamplePlugin.kt  LiveActivity.kt  LiveActivityManager.kt  LiveActivityModels.kt
android/src/test/java/: ExampleUnitTest.kt
ios/: Package.swift  README.md
ios/Sources/: ActivityManager.swift  ActivityProps.swift  LiveActivityPlugin.swift  PathHelper.swift  WebViewLogger.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/autogenerated/: reference.md
src/: desktop.rs  lib.rs  mobile.rs  models.rs
src/linux/: implementation.rs
src/macos/: implementation.rs
src/win/: implementation.rs
