[package]
name = "live-activity"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "live-activity"

[dependencies]
tauri = { version = "2.9.2", features = ["rustls-tls"] }
serde = "1.0"
thiserror = "2"
anyhow = "1"
corelib = { path = "../../modules/core" }

[target.'cfg(windows)'.dependencies.win-toast-notify]
version = "0.1.6"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
mac-notification-sys = "0.6.8"
objc2 = "0.6.3"
objc2-user-notifications = "0.3.2"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
