[package]
name = "live-activity"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "live-activity"

[dependencies]
tauri = { version = "2.9.2", features = ["rustls-tls"] }
serde = "1.0"
thiserror = "2"
anyhow = "1"
corelib = { path = "../../modules/core" }

[target.'cfg(windows)'.dependencies.win-toast-notify]
version = "0.1.6"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Foundation_Collections",
    "UI_Notifications",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(windows)'.dependencies.image]
version = "0.25.5"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
mac-notification-sys = "0.6.8"
objc2 = "0.6.3"
objc2-user-notifications = "0.3.2"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
